# Aether

./: .gitignore  CMakeLists.txt  CMakePresets.json  library.properties.in
.github/actions/setup/: action.yml
.github/workflows/: cd.yml  ci.yml
include/: aether.h  buffer.h  err.h  hash.h  hashmap.h  log.h  memory.h  random.h  router.h  session.h  socket.h  tcp.h  transport.h
src/: aether.c  buffer.c  err.c  hash.c  hashmap.c  log.c  memory.c  random.c  router.c  serial.c  session.c  socket.c  tcp.c  tick.c  transport.c
tests/: CMakeLists.txt
tests/include/: mock_socket.h
tests/src/: aether_tests.cc  buffer_tests.cc  cobs_tests.cc  err_tests.cc  hashmap_tests.cc  log_tests.cc  random_tests.cc  router_tests.cc  serial_tests.cc  socket_tests.cc  tcp_tests.cc  tick_tests.cc  transport_tests.cc
tools/cppcheck/: suppressions.xml
